<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgungugradient">

    <LinearLayout
        android:id="@+id/headeratas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgungutua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/judulapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nama_aplikasi"
            android:textColor="#FFFFFF"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/borderatas"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bgunguborder"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/headeratas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/fotomahasiswa"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="@id/namanimmahasiswa"
            app:layout_constraintEnd_toEndOf="@id/Logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@mipmap/logo_profil">

        </ImageView>

        <LinearLayout
            android:id="@+id/namanimmahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/namamahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/nama_mahasiswa"
                android:textColor="#000000"
                android:textSize="18dp">

            </TextView>

            <TextView
                android:id="@+id/nomormahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/nomor_mahasiswa"
                android:textColor="#000000"
                android:textSize="15dp">

            </TextView>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:id="@+id/Logout"
            android:text="LOGOUT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bgungu"
            android:layout_marginRight="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/cekdosenatas"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgungugradient"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borderatas">

        <TextView
            android:id="@+id/cekdosen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/cek_dosen"
            android:textSize="20dp"
            android:textColor="#000000">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/chatdosenatas"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgungugradient"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cekdosenatas">

        <TextView
            android:id="@+id/chatdosen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/chat_dosen"
            android:textSize="20dp"
            android:textColor="#000000">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cekprofilatas"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/bgungugradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatdosenatas"
        app:layout_constraintVertical_bias="0.301">

        <TextView
            android:id="@+id/cekprofil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cek_profil"
            android:textSize="20dp"
            android:textColor="#000000">

        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>